# hci-troubleshoot-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETE_GUIDE.md  CREATE_ALL_FILES.md  DELIVERY_SUMMARY.md  Dockerfile.migrations  FINAL_DELIVERY.md  Makefile  QUICK_TEST_GUIDE.md  README.md  alembic.ini  atlas.hcl  conftest.py  create_project_files.sh  create_structure.sh  docker-compose.yml  generate_all_code.sh  project_structure.txt  pyproject.toml  pytest.ini  release-please-config.json  test_manual.sh  test_multi_assistant.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.vk/: auto_review.json  status_map.json
backend/: conftest.py
backend/agent-service/: Dockerfile  pyproject.toml
backend/agent-service/app/: config.py  main.py
backend/agent-service/app/adapters/: acli_adapter.py  agent_router.py  htp_agent_adapter.py  pai_agent_adapter.py  scp_adapter.py
backend/agent-service/app/core/: __init__.py  agent_port.py  glm_client.py  react_executor.py  tool_registry.py
backend/agent-service/app/routes/: agent.py
backend/agent-service/app/services/: confirm_service.py  prompt_builder.py  scheduler_client.py
backend/agent-service/tests/: conftest.py
backend/agent-service/tests/integration/: __init__.py  test_agent_service_api.py
backend/agent-service/tests/unit/: test_agent_port.py  test_agent_router.py  test_ai_client.py  test_chat_completion_stream.py
backend/api-gateway/: Dockerfile  pyproject.toml  requirements.txt
backend/api-gateway/app/: config.py  main.py
backend/api-gateway/app/middleware/: __init__.py  request_logging.py  trace_id.py
backend/api-gateway/app/models/: __init__.py  terminal.py
backend/api-gateway/app/routes/: __init__.py  assistants.py  atoms.py  cases.py  conversations.py  environments.py  health.py  kb.py  terminal.py  websocket.py
backend/api-gateway/app/services/: session.py  terminal.py
backend/api-gateway/tests/: conftest.py
backend/api-gateway/tests/integration/: test_gateway_integration.py  test_terminal_api.py
backend/api-gateway/tests/unit/: test_gateway.py  test_terminal.py
backend/case-service/: Dockerfile  pyproject.toml  requirements.txt
backend/case-service/app/: config.py  main.py
backend/case-service/app/models/: __init__.py  assistant_evaluation.py  case.py  conversation.py  customer.py  environment.py  prompt_audit.py
backend/case-service/app/repositories/: case_repo.py  environment_repo.py
backend/case-service/app/routes/: admin_routes.py  cases.py  environments.py
backend/case-service/app/services/: case_service.py  environment_service.py  kb_pusher.py  quality_score.py
backend/case-service/tests/: __init__.py  conftest.py
backend/case-service/tests/unit/: test_environment_service.py  test_quality_score.py  test_status_transitions.py
backend/eval-service/: Dockerfile  pyproject.toml
backend/eval-service/app/: config.py  main.py
backend/eval-service/app/routes/: agent_stats.py  evaluate.py
backend/eval-service/app/services/: agent_stats_service.py  quality_score.py
backend/eval-service/tests/: conftest.py
backend/eval-service/tests/integration/: __init__.py  test_eval_service_api.py
backend/eval-service/tests/unit/: test_quality_score.py
backend/kb-service/: Dockerfile  pyproject.toml  requirements.txt
backend/kb-service/app/: config.py  main.py
backend/kb-service/app/models/: __init__.py  chunk.py  document.py  kb_category.py  kbd_entry.py  sop_chunk.py  sop_document.py  sop_node.py  sop_tree.py
backend/kb-service/app/repositories/: category_repo.py
backend/kb-service/app/routes/: __init__.py  admin.py  atoms.py  categories.py  classify.py  health.py  hits.py  ingest.py  review.py  route.py  search.py  sop_ingest.py
backend/kb-service/app/schemas/: __init__.py  sop_template.py
backend/kb-service/app/services/: atom_search_service.py  category_service.py  embedding.py  ingestor.py  search_engine.py  sop_matcher.py  sop_parser.py
backend/kb-service/app/utils/: jieba_hci.py  text_splitter.py
backend/kb-service/config/: category_baseline.yaml
backend/kb-service/data/sop_skills/vm_start_failure/: keywords_map.json
backend/kb-service/data/sop_skills/vm_start_failure/chapters/: sub_CPU不足.md  sub_不支持的虚拟机兼容性版本号.md  sub_内部异常.md  sub_存储ID不可访问.md  sub_序列号过期.md  sub_更新网卡设备信息失败_服务不可用.md  sub_获取CBT信息失败.md  sub_获取快照类型失败.md  sub_虚拟机未运行.md  sub_虚拟机正在进行其他操作.md  sub_虚拟机镜像忙.md  sub_虚拟磁盘镜像文件不可访问.md  有启动虚拟机失败任务.md
backend/kb-service/tests/: conftest.py  test_hits.py  test_sop_matcher.py  test_sop_parser.py  test_text_splitter.py
backend/scheduler-service/: Dockerfile  pyproject.toml  requirements.txt
backend/scheduler-service/app/: config.py  main.py
backend/scheduler-service/app/routes/: scheduler_routes.py
backend/scheduler-service/app/services/: k8s_client.py  pod_pool.py  scheduler_service.py
backend/scheduler-service/tests/: conftest.py
backend/scheduler-service/tests/integration/: test_scheduler_integration.py  test_scheduler_redis.py
backend/scheduler-service/tests/unit/: test_k8s_client_manifest.py  test_scheduler_service.py
data-pipeline/: converter.py  enricher.py  fetcher.py  ingestor.py  pipeline.py  reviewer_cli.py
database/: 20260407001_schema_repair.sql  README.md  desired_extras.sql  desired_schema.sql  init_schema.sql  migrate_conversation_p4_v1.sql  migrate_evaluation_v1.sql  migrate_kb_v3.sql  migrate_kbd_pipeline_v1.sql  migrate_p4_v1.sql  migrate_tool_audit_log.sql  schema_design.json
docs/: 00_需求说明.md  01_architecture_design.md  01_架构设计.md  02_database_design.md  02_数据库设计.md  03_api_design.md  03_接口设计.md  04_development_guide.md  04_可观测性设计.md  05_K8s设计.md  05_testing_guide.md  05_开发指南.md  06_missing_content_detailed.md  06_开发指南.md  06_测试指南.md  07_文件清单.md  07_测试指南.md  08_文件清单.md  08_项目进展.md  09_项目进展.md  10_多助手接入评估.md  11_WSL切换交接.md  11_生产环境.md  12_AI层设计.md  12_三方助手Adapter接入指南.md  12_部署问题汇总.md  13_AI层设计.md  13_RAG设计.md  14_LearningClaw与ProductionClaw实现方案.md  14_RAG设计.md  15_AI层RAG对接架构决策.md  18_任务编排.md  19_任务编排.md  20_任务编排.md  21_GitOps标准化开发流程.md  21_本地K3s部署日志.md  (+10 more)
(+987 files in other folders)
