[project]
name = "hci-agent-service"
version = "1.0.0"
description = "HCI 智能排障平台 — AI 推理引擎服务（从 conversation-service 拆分）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.11.7",
    "pydantic-settings>=2.9.1",
    "redis==5.0.1",
    "httpx>=0.27.0",
    "pydantic-ai[openai]==0.8.1",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
    "prometheus-client>=0.20.0",
    "paramiko>=3.0.0",
]

[tool.uv]
virtual = true
