[project]
name = "hci-api-gateway"
version = "0.1.0"
description = "HCI 智能排障平台 — API 网关服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.27.0",
    "websockets==12.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.9.1",
    "redis==5.0.1",
    "httpx>=0.27.0",
    "prometheus-client==0.20.0",
    "asyncssh==2.14.2",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
]

[tool.uv]
virtual = true
