[project]
name = "hci-case-service"
version = "0.1.0"
description = "HCI 智能排障平台 — 工单服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.9.1",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "httpx>=0.27.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-logging",
    "prometheus-client>=0.19.0",
]

[tool.uv]
virtual = true
