[project]
name = "hci-kb-service"
version = "0.1.0"
description = "HCI 智能排障平台 — 知识库服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.9.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "httpx>=0.27.0",
    "pgvector==0.2.4",
    "jieba==0.42.1",
    "openai>=1.0.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-logging",
    "prometheus-client==0.20.0",
    "python-docx>=1.2.0",
]

[tool.uv]
virtual = true
